update manifest file and update cache

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "newzapp 📰",
-  "short_name": "📰",
+  "name": "NewZapp 📰",
+  "short_name": "NewZapp 📰",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
